--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,5 @@
+2014-04-30 Matt:
+	* Adding runZHS.py which will execute N number of showers.
+
 2014-04-04 Matt:
 	* Adding Jaime's code for revision control
